--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.7.3",
     "modern-normalize": "^3.0.1",
     "prettier": "^3.5.3",
