feat: Navigation added, Hero WIP

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,7 +29,8 @@
       "@context/*": ["context/*"],
       "@hooks/*": ["hooks/*"],
       "@styles/*": ["styles/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@constants/*": ["constants/*"]
     }
   },
   "include": ["src"]
