--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.3",
+    "hamburger-react": "^2.5.2",
     "modern-normalize": "^3.0.1",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
