feat: PricingTable added

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,7 +31,8 @@
       "@styles/*": ["styles/*"],
       "@utils/*": ["utils/*"],
       "@constants/*": ["constants/*"],
-      "@services/*": ["services/*"]
+      "@services/*": ["services/*"],
+      "@data/*": ["data/*"]
     }
   },
   "include": ["src"]
