--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
     "sass": "^1.86.3"
   },
