--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,7 +7,6 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
@@ -15,14 +14,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
-    /* Aliasy */
     "baseUrl": "./src",
     "paths": {
       "@components/*": ["components/*"],
@@ -30,6 +27,7 @@
       "@hooks/*": ["hooks/*"],
       "@styles/*": ["styles/*"],
       "@utils/*": ["utils/*"],
+      "@constants": ["constants"],
       "@constants/*": ["constants/*"],
       "@services/*": ["services/*"],
       "@data/*": ["data/*"]
